[tool.poetry]
name = "cont"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
halo = "^0.0.31"
docker = "^6.1.3"
typer = {version = "^0.9.0", extras = ["all"]}

[tool.poetry.scripts]
cont = "cont.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
