[project]
name = "my-cont"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4"
authors = [{ name = "Pavel Kirilin", email = "s3riussan@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "docker>=7.1.0,<8",
  "halo>=0.0.31,<0.0.32",
  "pydantic>=2.3.0,<3",
  "typer[all]>=0.9.0,<0.10",
]
dynamic = ["version"]

[project.scripts]
cont = "my_cont.__main__:main"

[dependency-groups]
dev = [
  "black>=23.9.0,<24",
  "isort>=5.12.0,<6",
]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.uv]
default-groups = "all"
